[project]
name = "sncloud"
version = "0.2.1"
description = "Unofficial Python API client that allows you to access your Supernote files through the Supernote Cloud"
readme = "README.md"
authors = [
    { name = "Julian Prester", email = "hi@julianprester.com" },
    { name = "Steve Zatz" }
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[project.scripts]
sncloud = "sncloud.cli:cli"

[project.urls]
Homepage = "https://github.com/slzatz/sncloud"
Changelog = "https://github.com/slzatz/sncloud/releases"
Issues = "https://github.com/slzatz/sncloud/issues"
CI = "https://github.com/slzatz/sncloud/actions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
